@@ -60,8 +60,8 @@ Apache/Perl mailing list by sending mail to
 modperl@apache.org with the string "subscribe modperl" in
 the body.   
 
-There is a hypermail archive for this list available from:
-http://outside.organic.com/mail-archives/modperl/
+There is an Epigone archive for this list available from:
+http://forum.swarthmore.edu/epigone/modperl
 
 The mod_perl FAQ is available from:
 http://www.ping.de/~fdc/mod_perl/
